--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,19 @@
+html{
+    overflow-y: scroll;
+}
+
 #header {
     background-color: transparent;
     background-size: cover;
     background-attachment: fixed;
     position: relative;
-    height: 600px;
     width: 100%;
     display: block;
 }
 
 .page {
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
     width: 100%;
     height: 100%;
     -webkit-transition: 0.5s;
@@ -19,7 +22,7 @@
 }
 
 .stars {
-    position: fixed;
+    position: relative;
 }
 
 .container {
@@ -133,4 +136,8 @@
 
 ion-icon {
     color: white;
+  }
+
+  .social-icons{
+      padding: 0;
   }
