--- a/css/media.css
+++ b/css/media.css
@@ -29,3 +29,30 @@
         width: 66.66667%;
     }
 }
+
+@media (min-width: 0px) and (max-width: 600px) {
+    .display-table h1{
+        font-size: 30px;
+    }
+
+    .display-table h1 span:after {
+        top: 24px;
+    }
+    .display-table h1 span::before {
+        top: 24px;
+    }
+
+    .display-table h3 {
+        font-size: 11px;
+    }
+
+    .profile-thumb {
+        height: 150px;
+        width: 150px;
+    }
+
+    ion-icon {
+        font-size: 16px !important;
+      }
+    
+}
