--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,111 @@ ion-icon {
 ion-icon {
     font-size: 32px !important;
 }
+
+/* Resume */
+.resume{
+    padding: 7em 0;
+    clear: both;
+    background-color: white;
+}
+
+.myResume{
+    text-align: center;
+    margin-bottom: 5em;
+    padding-left: 0px;
+}
+
+.myResume h2{
+    font-size: 40px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+    color: #000;
+    font-family: "Space Mono", Arial, serif;
+    font-weight: 400;
+    margin: 0 0 20px 0;
+}
+
+.col-12{
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 0%;
+}
+
+
+.container::before{
+    content: " " ;
+    display: table;
+}
+
+.row::before{
+    content: " " ;
+    display: table;
+}
+
+
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-suitcase:before {
+    content: "\ea20";
+}
+
+
+/* Header */
+.header {
+    padding: 10px 16px;
+    /* background: #555; */
+    color: #f1f1f1;
+    display: none;
+  }
+  
+  .content {
+    padding: 16px;
+  }
+  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: block !important;
+  }
+  
+  .sticky + .content {
+    padding-top: 0px;
+  }
+
+  .expHead{
+      display: flex;
+      justify-content: center;
+      margin: 20px 0;
+  }
+
+  .expHead h3{
+    color: black;
+    background: #e6e6e6;
+    padding: 10px 20px;
+    text-align: center;
+    font-family: "Space Mono", Arial, serif;
+    text-transform: uppercase;
+    border: 4px solid #e6e6e6;
+    border-radius: 16px;
+    letter-spacing: 5px;
+    margin: 0;
+    z-index: 1;
+  }
+
+  .experiencce{
+      background-color: white;
+  }
