Scroll animation added

--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ body{
 
 ion-icon {
     color: white;
+    border: 2px solid;
   }
 
   .social-icons{
@@ -158,6 +159,7 @@ ion-icon {
 
 ion-icon {
     font-size: 32px !important;
+    cursor: pointer;
 }
 
 /* Resume */
@@ -266,4 +268,18 @@ ion-icon {
 
   .experiencce{
       background-color: white;
+  }
+
+
+  .iconName{
+    position: relative;
+    top: -3px;
+    padding: 0 8px 0 4px;
+    left: -4px;
+    z-index: 0;
+    border-top-right-radius: 32px;
+    background-color: white;
+    cursor: pointer;
+    font-family: monospace;
+    font-weight: bold;
   }
