--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-html{
+html {
     overflow-y: scroll;
 }
 
-body{
+body {
     margin: 0;
     min-width: 340px
 }
@@ -82,7 +82,7 @@ body{
     color: white;
 }
 
-.display-table h1 span{
+.display-table h1 span {
     padding: 4px 15px;
     position: relative;
 }
@@ -142,11 +142,11 @@ body{
 ion-icon {
     color: white;
     border: 2px solid;
-  }
+}
 
-  .social-icons{
-      padding: 0;
-  }
+.social-icons {
+    padding: 0;
+}
 
 .overlay {
     position: absolute;
@@ -163,19 +163,19 @@ ion-icon {
 }
 
 /* Resume */
-.resume{
+.resume {
     padding: 7em 0;
     clear: both;
     background-color: white;
 }
 
-.myResume{
+.myResume {
     text-align: center;
     margin-bottom: 5em;
     padding-left: 0px;
 }
 
-.myResume h2{
+.myResume h2 {
     font-size: 40px;
     margin-bottom: 20px;
     line-height: 1.5;
@@ -185,7 +185,7 @@ ion-icon {
     margin: 0 0 20px 0;
 }
 
-.col-12{
+.col-12 {
     position: relative;
     min-height: 1px;
     padding-left: 15px;
@@ -194,19 +194,20 @@ ion-icon {
 }
 
 
-.container::before{
-    content: " " ;
+.container::before {
+    content: " ";
     display: table;
 }
 
-.row::before{
-    content: " " ;
+.row::before {
+    content: " ";
     display: table;
 }
 
 
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
     font-family: 'icomoon' !important;
     speak: none;
     font-style: normal;
@@ -229,30 +230,30 @@ ion-icon {
     /* background: #555; */
     color: #f1f1f1;
     display: none;
-  }
-  
-  .content {
+}
+
+.content {
     padding: 16px;
-  }
-  
-  .sticky {
+}
+
+.sticky {
     position: fixed;
     top: 0;
     width: 100%;
     display: block !important;
-  }
-  
-  .sticky + .content {
+}
+
+.sticky+.content {
     padding-top: 0px;
-  }
+}
 
-  .expHead{
-      display: flex;
-      justify-content: center;
-      margin: 20px 0;
-  }
+.expHead {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
 
-  .expHead h3{
+.expHead h3 {
     color: black;
     background: #e6e6e6;
     padding: 10px 20px;
@@ -264,16 +265,16 @@ ion-icon {
     letter-spacing: 5px;
     margin: 0;
     z-index: 1;
-  }
+}
 
-  .experiencce{
-      background-color: white;
-  }
+.experiencce {
+    background-color: white;
+}
 
 
-  .iconName{
+.iconName {
     position: relative;
-    top: -3px;
+    top: -3.5px;
     padding: 0 8px 0 4px;
     left: -4px;
     z-index: 0;
@@ -282,4 +283,134 @@ ion-icon {
     cursor: pointer;
     font-family: monospace;
     font-weight: bold;
-  }
+}
+
+/* Profile Section */
+
+.summary {
+    display: flex;
+    justify-content: center;
+
+}
+
+.profileDetails {
+    width: 25%;
+}
+
+.profilePic {
+    width: 33.33%;
+    background-size: cover !important;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    height: 200px;
+    width: 200px;
+    margin-bottom: 30px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+    background: url(https://us.123rf.com/450wm/gmast3r/gmast3r1411/gmast3r141100350/33865095-businessman-profile-icon-male-portrait-flat.jpg);
+}
+
+.aboutMe {
+    width: 66.66%;
+    padding: 0 60px;
+}
+
+.profile {
+    padding: 20px;
+    background-color: white;
+}
+
+.hello {
+    color: #000;
+    font-family: "Space Mono", Arial, serif;
+    font-weight: 400;
+    margin: 0 0 20px 0;
+}
+
+.aboutMe p {
+    font-family: "Space Mono", Arial, serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #4d4d4d;
+}
+
+.personalDetails {
+    display: flex;
+}
+
+/* Common CSS */
+.pageHeading {
+    font-family: "Kaushan Script", cursive;
+    background-color: white;
+}
+
+.pageHeading h1 {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.skills progress {
+    height: 24px;
+    width: 350px;
+}
+
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 75%;
+    padding: 20px;
+}
+
+.progress p{
+    text-align: center;
+    font-family: "Space Mono", Arial, serif;
+    margin: 0;
+}
+
+.profileDetails {
+    width: 25%;
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.info {
+    margin: 0;
+    padding: 0;
+    width: 90%;
+    float: left;
+}
+
+.info li:first-child {
+    padding-top: 0;
+}
+
+.info li {
+    width: 100%;
+    float: left;
+    list-style: none;
+    padding: 10px 0;
+}
+
+.info li .first-block {
+    width: 40%;
+    display: inline-block;
+    float: left;
+    color: #000;
+    font-weight: bold;
+}
+
+.info li .second-block {
+    width: 60%;
+    display: inline-block;
+    color: rgba(0, 0, 0, 0.5);
+}
